--- a/Windexer/Components/Layout/MainLayout.razor
+++ b/Windexer/Components/Layout/MainLayout.razor
@@ -12,6 +12,7 @@
                     <RadzenMenuItem Text="Folders to index" Path="/RootFolders" Icon="folder" />
                     <RadzenMenuItem Text="Indexation" Path="/Indexation" Icon="sync" />
                 </RadzenMenuItem>
+                <RadzenMenuItem Text="About" Path="/About" Icon="help_outline" />
             </RadzenMenu>
         </RadzenStack>
     </RadzenHeader>
