--- a/Windexer/_Imports.razor
+++ b/Windexer/_Imports.razor
@@ -5,10 +5,10 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using Windexer
-@using Windexer.Model.Entities
-@using Windexer.Core.Managers
-@using Windexer.Components
+@using WinDexer
+@using WinDexer.Model.Entities
+@using WinDexer.Core.Managers
+@using WinDexer.Components
 @using Radzen.Blazor
 @using Radzen
-@using Windexer.Components.Shared;
+@using WinDexer.Components.Shared;
