Error managemtn, improve display, more info during indexation

--- a/Windexer/Components/Pages/IndexEntriesHierarchy.razor
+++ b/Windexer/Components/Pages/IndexEntriesHierarchy.razor
@@ -7,37 +7,38 @@
     LoadData="@LoadData"
     IsLoading=@_isLoading 
     Count="@_itemsCount"
+    SelectionMode="DataGridSelectionMode.Single" 
+    @bind-Value=@_selectedItems
+    AllowRowSelectOnRowClick="true"
     RowRender="@RowRender"
     LoadChildData="@LoadChildData" 
-    AllowRowSelectOnRowClick="true"
     AllowFiltering="true"    
     FilterPopupRenderMode="PopupRenderMode.OnDemand" 
     FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive" 
     AllowColumnResize="true" 
     AllowAlternatingRows="true" 
-    AllowSorting="true" 
+    AllowSorting="false" 
     PageSize="50" 
     AllowPaging="true"
     ShowPagingSummary="true"    
     ColumnWidth="300px"
 >
     <Columns>
-        <RadzenDataGridColumn TItem="IndexEntry" Property="IsFolder" Filterable="true" Title="Type" Width="100px" Visible="true">
+        <RadzenDataGridColumn TItem="IndexEntry" Property="Name" Filterable="true" Title="Name" Width="400px">
             <Template Context="indexEntry">
-                @if (indexEntry.IsFolder)
+                @if(indexEntry.IsFolder)
                 {
-                    <RadzenIcon Icon="folder" />
+                    <RadzenIcon Icon="folder" /> @indexEntry.Name
                 }
                 else
                 {
-                    <RadzenIcon Icon="description" />
+                    <RadzenIcon Icon="description" /> @indexEntry.Name
                 }
             </Template>
         </RadzenDataGridColumn>
-        <RadzenDataGridColumn TItem="IndexEntry" Property="Name" Filterable="true" Title="Name" Width="100px" />
         <RadzenDataGridColumn TItem="IndexEntry" Property="Extension" Filterable="true" Title="Extension" Width="70px" />
-        <RadzenDataGridColumn TItem="IndexEntry" Property="Path" Filterable="true" Title="Path" Width="500px" />
-        <RadzenDataGridColumn TItem="IndexEntry" Property="Root.Path" Filterable="true" Title="Root Folder" Width="500px" Visible="true"/>
+        <RadzenDataGridColumn TItem="IndexEntry" Property="Path" Filterable="false" Title="Path" Width="500px" Visible="false" />
+        <RadzenDataGridColumn TItem="IndexEntry" Property="Root.Path" Filterable="true" Title="Root Folder" Width="200px" Visible="true"/>
         <RadzenDataGridColumn TItem="IndexEntry" Property="RelativePath" Filterable="true" Title="Relative Path" Width="500px" Visible="true" />
         <RadzenDataGridColumn TItem="IndexEntry" Property="LastSeen" Filterable="true" Title="Last seen" Width="200px" Visible="true">
             <Template Context="indexEntry">
@@ -63,9 +64,27 @@
                 }
             </Template>
         </RadzenDataGridColumn>
-        <RadzenDataGridColumn TItem="IndexEntry" Property="Size" Filterable="true" Title="Size" Width="250px" Visible="true" />
-        <RadzenDataGridColumn TItem="IndexEntry" Property="FilesCount" Filterable="true" Title="Files Count" Width="250px" Visible="true" />
-        <RadzenDataGridColumn TItem="IndexEntry" Property="FoldersCount" Filterable="true" Title="Folders Count" Width="250px" Visible="true" />
+        <RadzenDataGridColumn TItem="IndexEntry" Property="Size" Filterable="true" Title="Size" Width="250px" Visible="true">
+            <Template Context="indexEntry">
+                @AsReadableSize(indexEntry.Size)
+            </Template>
+        </RadzenDataGridColumn>
+        <RadzenDataGridColumn TItem="IndexEntry" Property="FilesCount" Filterable="true" Title="Files Count" Width="250px" Visible="true">
+            <Template Context="indexEntry">
+                @if (indexEntry.IsFolder)
+                {
+                    @indexEntry.FilesCount.ToString("N0");
+                }
+            </Template>
+        </RadzenDataGridColumn>
+        <RadzenDataGridColumn TItem="IndexEntry" Property="FoldersCount" Filterable="true" Title="Folders Count" Width="250px" Visible="true">
+            <Template Context="indexEntry">
+                @if (indexEntry.IsFolder)
+                {
+                    @indexEntry.FoldersCount.ToString("N0");
+                }
+            </Template>
+        </RadzenDataGridColumn>
     </Columns>
 </RadzenDataGrid>
 
