Improve about page, add Tutorial, store DB at the correct place, fix publish to MSIX

--- a/WinDexer/Components/Shared/IndexationStatus.razor
+++ b/WinDexer/Components/Shared/IndexationStatus.razor
@@ -1,5 +1,5 @@
-﻿@if (IndexationManager.IndexationStart.HasValue)
+﻿@if (IndexationManager.IndexationStart.HasValue && IndexationManager.IsIndexing)
 {
-    <span>Indexations tarted on @IndexationManager.IndexationStart.Value.ToString("d") at @IndexationManager.IndexationStart.Value.ToString("t")</span>
+    <span>Indexation started on @IndexationManager.IndexationStart.Value.ToString("d") at @IndexationManager.IndexationStart.Value.ToString("t")</span>
     <span>@FilesLabel found in @FoldersLabel</span>
 }
