--- a/Windexer/Components/Pages/About.razor
+++ b/Windexer/Components/Pages/About.razor
@@ -6,8 +6,8 @@
     <RadzenStack Orientation="Orientation.Vertical" AlignItems="AlignItems.Start" JustifyContent="JustifyContent.Start" Gap="2em">
         <h1>WinDexer</h1>
         <div>Version @GetVersion()</div>
-        <div>By Ryo Saeba</div>
-        <RadzenLink Path="https://github.com/dczerwon/WinDexer" Text="https://github.com/dczerwon/WinDexer"/>        
+        <div>By Ryo Saeba San</div>
+        <RadzenLink Path="https://github.com/ryosaebasan/WinDexer" Text="https://github.com/ryosaebasan/WinDexer" />
     </RadzenStack>
 </RadzenStack>
 
