Fix resharper warnings

--- a/Windexer/Components/Pages/About.razor
+++ b/Windexer/Components/Pages/About.razor
@@ -15,7 +15,8 @@
 {
     private string GetVersion()
     {
-        var suffix = "";
+        // ReSharper disable once RedundantAssignment
+        var suffix = string.Empty;
 #if DEBUG
         suffix = " (Beta)";
 #endif
