--- a/Windexer/Components/Pages/IndexEntriesList.razor
+++ b/Windexer/Components/Pages/IndexEntriesList.razor
@@ -71,7 +71,7 @@
             <Template Context="indexEntry">
                 @if (indexEntry.IsFolder)
                 {
-                    @indexEntry.FilesCount.ToString("N0");
+                    @indexEntry.FilesCount.ToString("N0")
                 }
             </Template>
         </RadzenDataGridColumn>
@@ -79,7 +79,7 @@
             <Template Context="indexEntry">
                 @if (indexEntry.IsFolder)
                 {
-                    @indexEntry.FoldersCount.ToString("N0");
+                    @indexEntry.FoldersCount.ToString("N0")
                 }
             </Template>
         </RadzenDataGridColumn>
