- Fix DB migrations - Fix sort in views - Improve indexation messages display

--- a/Windexer/Components/Pages/IndexEntriesHierarchy.razor
+++ b/Windexer/Components/Pages/IndexEntriesHierarchy.razor
@@ -16,7 +16,7 @@
     FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive" 
     AllowColumnResize="true" 
     AllowAlternatingRows="true" 
-    AllowSorting="false" 
+    AllowSorting="true" 
     PageSize="50" 
     AllowPaging="true"
     ShowPagingSummary="true"    
@@ -31,8 +31,8 @@
             </Template>
         </RadzenDataGridColumn>
         <RadzenDataGridColumn TItem="IndexEntry" Property="Extension" Filterable="true" Title="Extension" Width="70px" />
-        <RadzenDataGridColumn TItem="IndexEntry" Property="Path" Filterable="false" Title="Path" Width="500px" Visible="false" >
-            <Template Context="indexEntry">
+        <RadzenDataGridColumn TItem="IndexEntry" Property="Path" Filterable="true" Title="Path" Width="500px" Visible="false" >
+            <Template Context="indexEntry"> 
                 <span class="dcz-link" @onclick=@(_ => ShowInExplorer(indexEntry.Path))>
                     @indexEntry.Path
                 </span>
@@ -52,7 +52,7 @@
                 </span>
             </Template>
         </RadzenDataGridColumn>
-        <RadzenDataGridColumn TItem="IndexEntry" Property="ContainerPath" Filterable="false" Title="Location" Width="500px" Visible="true">
+        <RadzenDataGridColumn TItem="IndexEntry" Property="ContainerPath" Filterable="true" Title="Location" Width="500px" Visible="true">
             <Template Context="indexEntry">
                 <span class="dcz-link" @onclick=@(_ => ShowInExplorer(indexEntry.ContainerPath))>
                     @indexEntry.ContainerPath
