--- a/Windexer/Components/Pages/Indexation.razor
+++ b/Windexer/Components/Pages/Indexation.razor
@@ -2,7 +2,7 @@
 
 <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Start" JustifyContent="JustifyContent.Normal" Gap="2em" >
     <RadzenButton Click="StartIndexation" Text="Start Indexation" Disabled="IndexationManager.IsIndexing"/>
-    <!--RadzenButton Click="WipeDb" ButtonStyle="ButtonStyle.Danger" Text="Wipe database" Disabled="IndexationManager.IsIndexing" /-->
+    <RadzenButton Click="WipeDb" ButtonStyle="ButtonStyle.Danger" Text="Wipe database" Disabled="IndexationManager.IsIndexing" />
     <IndexationStatus />
 </RadzenStack>
 
