--- a/Windexer/MainPage.xaml
+++ b/Windexer/MainPage.xaml
@@ -5,7 +5,8 @@
              x:Class="WinDexer.MainPage"
              BackgroundColor="{DynamicResource PageBackgroundColor}">
 
-    <BlazorWebView x:Name="blazorWebView" HostPage="wwwroot/index.html">
+    <!-- ReSharper disable once UnusedMember.Local -->
+    <BlazorWebView x:Name="BlazorWebView" HostPage="wwwroot/index.html">
         <BlazorWebView.RootComponents>
             <RootComponent Selector="#app" ComponentType="{x:Type local:Routes}" />
         </BlazorWebView.RootComponents>
