--- a/Windexer/Platforms/Windows/App.xaml
+++ b/Windexer/Platforms/Windows/App.xaml
@@ -2,7 +2,6 @@
     x:Class="WinDexer.WinUI.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:maui="using:Microsoft.Maui"
-    xmlns:local="using:WinDexer.WinUI">
+    xmlns:maui="using:Microsoft.Maui">
 
 </maui:MauiWinUIApplication>
